<resources>
    <string name="hello">Hello World, CaptureActivity!</string>

    <!--App-->
    <string name="app_name">SmallDianPing</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--LoginActivity-->
    <string name="activity_register_title">注册</string>
    <string name="digits_et">abcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZ0123456789</string>

    <!--MainActivity-->
    <string name="activity_main_double_exit_tips">再按一次退出程序</string>
    <string name="activity_main_tag_store">商家</string>
    <string name="activity_main_tag_order">订单</string>
    <string name="activity_main_tag_mine">我的</string>
    <!--StoreFragment-->
    <string name="fragment_store_city">北京市</string>
    <string name="fragment_store_search_hint">输入商家、分类或商圈</string>
    <string name="fragment_store_guess_you_like">猜你喜欢</string>
    <!--OrderFragment-->
    <string name="fragment_order_title">订单</string>
    <string name="fragment_order_all">全部</string>
    <string name="fragment_order_classify">分类</string>

    <!--OrderDetailActivity-->
    <string name="activity_order_detail_evaluate_tips">给个评价吧，对其他小伙伴帮助很大哦</string>
    <string name="activity_order_detail_title">订单详情</string>
    <string name="activity_order_detail_order_id">订单号码：</string>
    <string name="activity_order_detail_pay_time">付款时间：</string>
    <string name="activity_order_detail_receiver_name">收货姓名：</string>
    <string name="activity_order_detail_order_key">订单使用码：</string>
    <string name="activity_order_detail_order_total_cost">订单金额：</string>
    <string name="activity_order_detail_order_goods_name">商品名称：</string>
    <string name="activity_order_detail_order_goods_number">商品数量：</string>

    <!--OrderEvaluateActivity-->
    <string name="activity_order_evaluate_title">订单评价</string>
    <string name="activity_order_evaluate_ratingbat_tips">请滑动星星评分</string>
    <string name="activity_order_evaluate_edittext_tips">写下你的评价</string>

    <!--MineFragment-->
    <string name="fragment_mine_title">我的</string>
    <string name="fragment_mine_login_tips">请点击登录</string>

    <!--CityPickerDialogActivity-->
    <string name="activity_city_picker_dialog_title">请选择地址</string>

    <!--LoginActivity-->
    <string name="activity_login_title">登录</string>
    <string name="activity_login_et_username_hint">请输入用户名</string>
    <string name="activity_login_et_password_hint">请输入密码</string>
    <string name="activity_login_btn_login">登录</string>
    <string name="activity_login_btn_register">注册</string>

    <!--SearchInputActivity-->
    <string name="activity_search_hot_search">热门搜索</string>
    <string name="activity_search_clear_history">清除历史记录</string>
    <!--HotSearchFragment-->

    <!--ResultListActivity-->
    <string-array name="foodtype_array">
        <item>全部</item>
        <item>中餐厅</item>
        <item>综合酒楼</item>
        <item>火锅店</item>
        <item>清真菜馆</item>
        <item>日本料理</item>
        <item>韩国料理</item>
        <item>快餐厅</item>
    </string-array>

    <string-array name="resorttype_arry">
        <item>离我最近</item>
        <item>好评优先</item>
        <item>人均最低</item>
        <item>人均最高</item>
    </string-array>

    <string-array name="adname_arry">
        <item>全部</item>
        <item>西城区</item>
        <item>东城区</item>
        <item>朝阳区</item>
        <item>海淀区</item>
        <item>丰台区</item>
        <item>通州区</item>
        <item>石景山区</item>
        <item>门头沟区</item>
        <item>昌平区</item>
        <item>大兴区</item>
        <item>顺义区</item>
        <item>怀柔区</item>
        <item>平谷区</item>
        <item>延庆区</item>
        <item>密云区</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tab_activity_template">TabActivityTemplate</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
