<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.Main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--正文-->

        <!--Fragment的好基友ViewPager-->
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </android.support.v4.view.ViewPager>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/colorAccent">

        </android.support.design.widget.TabLayout>

        <!--底部按钮栏-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            card_view:cardBackgroundColor="@color/colorPrimary"
            card_view:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <!--商家-->
                <LinearLayout
                    android:id="@+id/layoutStore"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgStore"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/ic_home_white_24dp" />

                    <TextView
                        android:id="@+id/tvStore"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:gravity="center"
                        android:text="@string/activity_main_tag_store"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--订单-->
                <LinearLayout
                    android:id="@+id/layoutOrder"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgOrder"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/ic_content_paste_white_24dp" />

                    <TextView
                        android:id="@+id/tvOrder"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:gravity="center"
                        android:text="@string/activity_main_tag_order"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <!--我-->
                <LinearLayout
                    android:id="@+id/layoutMine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgMine"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@mipmap/ic_person_white_24dp" />

                    <TextView
                        android:id="@+id/tvMine"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:gravity="center"
                        android:text="@string/activity_main_tag_mine"
                        android:textColor="@android:color/white"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
