<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.MainActivityFragment.FirstFragment">

    <!--标题栏-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout

                android:id="@+id/layoutCity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxEms="3"
                    android:singleLine="true"
                    android:text="@string/fragment_store_city"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imgCityArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/ic_keyboard_arrow_down_white_24dp" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cvSearch"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:src="@mipmap/ic_search_white_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/fragment_store_search_hint"
                        android:textColor="@android:color/darker_gray" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/layoutScan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/activity_margin"
                    android:layout_marginRight="@dimen/activity_margin"
                    android:src="@mipmap/ic_crop_free_white_24dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:layout_margin="@dimen/activity_margin"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvFoodType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--猜你喜欢标题栏-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginRight="@dimen/activity_margin"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="@dimen/card_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:src="@mipmap/ic_favorite_white_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/activity_margin"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/fragment_store_guess_you_like"
                        android:textColor="@android:color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
            <!--猜你喜欢自定义ListView，适配ScrollView的ListView-->
            <com.waka.workspace.smalldianping.CustomViews.ListViewForScrollView
                android:id="@+id/lvGuessYouLike"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null">

            </com.waka.workspace.smalldianping.CustomViews.ListViewForScrollView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
